--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,13 @@ main {
     margin-right: auto;
 }
 
+#number-label-el {
+    visibility: hidden;
+    position: absolute;
+    top: -100px;
+    left: -100px;
+}
+
 #number-el {
     padding-left: 15px;
     width: 117px;
@@ -88,6 +95,13 @@ main {
     font-weight: bold;
     border-radius: 5px;
     border: none;
+    color: #000;
+    background-color: #EFEFEF;
+}
+
+#convert-btn:hover, #convert-btn:focus {
+    background-color: #000;
+    color: #EFEFEF;
 }
 
 .unit-title {
