--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ main {
 
 #number-el {
     padding-left: 15px;
-    width: 117px;
+    width: 4ch;
+    max-width: 100%;
     height: 83px;
     font-size: 58px;
     font-weight: bolder;
@@ -84,6 +85,7 @@ main {
     color: white !important;
     text-align: center;
     margin-top: 15px;
+    transition: width 0.2s ease-in-out;
 }
 
 #convert-btn {
