Add light/dark theme switcher and fix inconsistent indentation across all files

--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,145 @@
+:root {
+	--light-color: rgba(255, 255, 255, 0.75);
+	--dark-color: rgba(0, 0, 0, 0.75);
+	--foreground-color: var(--dark-color);
+	--background-color: var(--light-color);
+}
+
+.dark {
+	--foreground-color: var(--light-color);
+	--background-color: var(--dark-color);
+}
+
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    margin: 0;
+	font-family: 'Inter', sans-serif;
+	margin: 0;
+	background-color: var(--background-color);
 }
 
 #container {
-    width: 550px;
-    height: 729px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    margin: 20px auto;
-    text-align: center;
-    border: 4px solid rgba(0, 0, 0, 0.75);
+	width: 550px;
+	height: 729px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	margin: 20px auto;
+	text-align: center;
+	border: 4px solid var(--foreground-color);
 }
 
 header {
-    background-image: url("images/background.jpeg");
-    height: 285px;
-    box-sizing: border-box;
-    padding-top: 33px;
-    border-bottom: 4px solid rgba(0, 0, 0, 0.75);
+	background-image: url("images/background.jpeg");
+	height: 285px;
+	box-sizing: border-box;
+	border-bottom: 4px solid var(--foreground-color);
+}
+
+.theme {
+	text-align: right;
+}
+
+.theme-icon {
+	color: var(--foreground-color);
+	background-color: var(--background-color);
+	padding: 0.4em;
+	border-left: 3px solid var(--foreground-color);
+	border-bottom: 3px solid var(--foreground-color);
 }
 
 main {
-    background: #ECFDF5;
-    padding-top: 36px;
-    padding-bottom: 9px;
-    height: 444px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
+	background: #ECFDF5;
+	padding-top: 36px;
+	height: 444px;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
 }
 
 .unit-title, #title {
-    margin: 0px;
+	margin: 0px;
 }
 
 .unit-container {
-    height: 108px;
-    width: 500px;
-    margin-top: 0px;
-    margin-bottom: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 20px;
-    background: #FFFFFF;
-    border: 3px solid rgba(0, 0, 0, 0.75);
+	height: 108px;
+	width: 500px;
+	margin-top: 0px;
+	margin-bottom: 25px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-top: 20px;
+	background: var(--background-color);
+	border: 3px solid var(--foreground-color);
 }
 
 #title {
-    width: fit-content;
-    font-weight: bolder;
-    font-size: 28px;
-    color: white !important;
-    background: rgba(0, 0, 0, 0.75);
-    padding: 20px 20px;
-    margin-left: auto;
-    margin-right: auto;
+	width: fit-content;
+	font-weight: bolder;
+	font-size: 28px;
+	color: var(--foreground-color) !important;
+	background: var(--background-color);
+	padding: 20px 20px;
+	margin-left: auto;
+	margin-right: auto;
+	border: 3px solid var(--foreground-color);
 }
 
 #number-label-el {
-    visibility: hidden;
-    position: absolute;
-    top: -100px;
-    left: -100px;
+	visibility: hidden;
+	position: absolute;
+	top: -100px;
+	left: -100px;
 }
 
 #number-el {
-    padding-left: 15px;
-    width: 4ch;
-    max-width: 100%;
-    height: 83px;
-    font-size: 58px;
-    font-weight: bolder;
-    border: none;
-    background: rgba(0, 0, 0, 0.75);
-    color: white !important;
-    text-align: center;
-    margin-top: 15px;
-    transition: width 0.2s ease-in-out;
+	padding-left: 15px;
+	width: 4ch;
+	max-width: 100%;
+	height: 83px;
+	font-size: 58px;
+	font-weight: bolder;
+	background: var(--background-color);
+	color: var(--foreground-color) !important;
+	text-align: center;
+	margin-top: 15px;
+	transition: width 0.2s ease-in-out;
+	border: 3px solid var(--foreground-color);
 }
 
 #convert-btn {
-    margin-top: 15px;
-    width: 117px;
-    height: 42px;
-    box-sizing: border-box;
-    font-family: inherit;
-    font-weight: bold;
-    border-radius: 5px;
-    border: none;
-    color: #000;
-    background-color: #EFEFEF;
+	margin: 15px 0;
+	width: 117px;
+	height: 42px;
+	box-sizing: border-box;
+	font-family: inherit;
+	font-weight: bold;
+	border-radius: 5px;
+	color: var(--foreground-color);
+	background-color: var(--background-color);
+	border: 3px solid var(--foreground-color);
 }
 
 #convert-btn:hover, #convert-btn:focus {
-    background-color: #000;
-    color: #EFEFEF;
+	color: var(--background-color);
+	background-color: var(--foreground-color);
+	border: 3px solid var(--background-color);
 }
 
 .unit-title {
-    font-weight: 600;
-    font-size: 20px;
+	font-weight: 600;
+	font-size: 20px;
+	color: var(--foreground-color);
 }
 
 .unit-text {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 9px;
+	font-weight: 400;
+	font-size: 14px;
+	margin-top: 9px;
+	color: var(--foreground-color);
 }
